tests/snapshots/parser_tests__err_duplicate_default.diag.snap
---
source: tests/parser_tests.rs
expression: error_msg
---
● E2000: Parse Error
────────────────────────────────────────────────────────────
  → <input>:6:9

     6 │
       │ default: print("second default")
       │ ^^^
       │

  ⓘ Expected expression
────────────────────────────────────────────────────────────
